--- a/src/lib/css/base.css
+++ b/src/lib/css/base.css
@@ -1,5 +1,5 @@
 html,body{
-    margin:0;width:100%;height:100%;background-color:black;color:white;
+    margin:0;width:100%;height:100%;background-color:black;color:white;scrollbar-width:none;overflow:hidden;
 }
 
 mark {
